fixed timeline mobile clipping issue

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -47,10 +47,10 @@ body {
 		height: 50%;
 	}
 	.sw-timeline {
-		margin-top: 0px;
+		margin-top: 2px;
 		margin-bottom: 10px;
 		width: 120px;
-		height: 50px;
+		height: 40px;
 	}
 	.ages-buttons {
 		margin-top: 10px;
